<resources>
    <string name="app_name">My Application</string>
    <string name="conversion">轉換</string>
    <string name="celsius_to_fahrenheit">攝氏轉華氏</string>
    <string name="fahrenheit_to_celsius">華氏轉攝氏</string>
    <string name="temperature">溫度</string>
    <string name="celsius">攝氏</string>
    <string name="fahrenheit">華氏</string>
    <string name="celsius2">C</string>
    <string name="fahrenheit2">F</string>
</resources>